[package]
name = "tts-gui"
version = "0.2.0"
edition = "2018"


[[bin]]
name = "tts-gui"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.13.1"
reqwest =  { version = "0.11.4", features = ["blocking"] }
log = "0.4.14"
env_logger = "0.8.4"
eframe = "0.13.1"
lazy_static = "1.4.0"
chrono = "0.4.19"
crossbeam-channel = "0.5.1"
